# tesi

./: .gitignore  CMakeLists.txt  INFO_Tree.txt  LICENSE  README.md  analize.cpp  det.mac  main.cc  main.cpp  run.mac  spectrum.txt  vis.mac
include/: action.hh  action_initialization.hh  charge_sharing.hh  constants.hh  construction.hh  detector.hh  detector_construction.hh  event.hh  event_action.hh  generator.hh  hits.hh  hitsmap.hh  physics.hh  planes_hits.hh  planes_sd.hh  run.hh  run_action.hh  save_compton.hh  search_argorithm.hh  sensitive_detector.hh  stepping_action.hh
include/utils/: charge_sharing.hh  constants.hh  energy_spectrum.hh  sample_energy.hh  save_compton.hh  save_step_info.hh
python/: distribution.ipynb  distribution.py
root/: ana_g4_2.cpp  analisi.cpp  analisi.ipynb  analize.cpp  analyze.cpp  analyze_3d.cpp  analyze_pixel.cpp  functions.hh
root/include/: charge_sharing.hh  data.hh  functions.hh
spectrum/: distribution.ipynb  distribution.py  distribution2.ipynb
src/: action.cc  action_initialization.cc  action_initialization.cpp  construction.cc  detector.cc  detector_construction.cc  detector_construction.cpp  event.cc  event_action.cc  event_action.cpp  generator.cc  generator.cpp  hits.cc  hits.cpp  hitsmap.cc  physics.cc  physics.cpp  planes_hits.cpp  planes_sd.cpp  run.cc  run_action.cc  run_action.cpp  save_compton.cpp  sensitive_detector.cc  sensitive_detector.cpp  stepping_action.cpp
src/utils/: sample_energy.cpp  save_compton.cpp  save_step_info.cpp
